tests/expectations/compiler/async_blocks/invalid_call_to_async_func.out
Error [ETYC0372042]: Only `inline` can be called from an async block.
    --> compiler-test:4:13
     |
   4 |             bar();
     |             ^^^^^
